# esp_littlefs

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Kconfig.projbuild  Makefile  README.md  component.mk  idf_component.yml  image-building-requirements.txt  library.json  partition_table_unit_test_app.csv  project_include.cmake  sdkconfig.defaults
.github/workflows/: esp_upload_component.yml  pr.yml
example/: CMakeLists.txt
example/main/: CMakeLists.txt  demo_esp_littlefs.c  demo_esp_littlefs_flash.c  demo_esp_littlefs_sd.c
include/: esp_littlefs.h  esp_littlefs_abs.h  esp_littlefs_flash.h  esp_littlefs_old.h  esp_littlefs_ram.h  esp_littlefs_sdcard.h  esp_littlefs_vfs.h
main/: littlefs_api.h
src/: esp_littlefs.c  esp_littlefs_abs.c  esp_littlefs_abs_priv.h  esp_littlefs_flash.c  esp_littlefs_flash_priv.h  esp_littlefs_old.c  esp_littlefs_ram.c  esp_littlefs_ram_priv.h  esp_littlefs_sdcard.c  esp_littlefs_sdcard_priv.h  esp_littlefs_vfs.c  esp_littlefs_vfs_priv.h  lfs_config.c  lfs_config.h  littlefs_api.c  littlefs_api.h  littlefs_bdl.c  littlefs_esp_part.c  littlefs_sdmmc.c
src/test/: test_benchmark.c  test_littlefs.c
test/: CMakeLists.txt  test_benchmark.c  test_dir.c  test_littlefs.c  test_littlefs_blockdev.c  test_littlefs_common.c  test_littlefs_common.h  test_littlefs_static_partition.c
test_apps/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  idf_component.yml  test_main.c
unit_tester/: main.c
